@@ -1,3 +1,11 @@
+Thu Jun 20 15:32:56 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* benchmark/gc/redblack.rb: import red black tree benchmark from
+	  https://github.com/jruby/rubybench/blob/master/time/bench_red_black.rb
+
+	* benchmark/gc/ring.rb: add a benchmark. This benchmark create many
+	  old objects.
+
 Thu Jun 20 15:14:00 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* benchmark/gc: create a directory to store GC related benchmark.
